--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,11 +13,13 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
