--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/pickers": "^3.3.10",
     "@react-google-maps/api": "^2.17.1",
+    "@react-oauth/google": "^0.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
